--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "get-ssl-certificate": "^2.3.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1"
   },
